# exfat

./: .gitignore  Makefile.am  configure.ac  exfat-resize-notes.md
fuse/: Makefile.am  main.c
resize/: .ycm_extra_conf.py  Makefile.am  cbm.h  fat.h  main.c  resize_exfat.c  rootdir.h  uct.h  vbr.c  vbr.h
